==> AtherEnergy/asdk/platform/Infineon/cyt2b75/dal/src/asdk_pinmux.c <==
#include "asdk_mcu_pins.h" // Defines MCU pins as is
#include "asdk_gpio.h"     // ASDK GPIO APIs
#include "asdk_pinmux.h"
#include "cy_device_headers.h" // Defines reg. and variant of CYT2B7 series
#include "gpio/cy_gpio.h"      // CYT2B75 GPIO driver APIs
#include "sysint/cy_sysint.h"  // CYT2B75 system Interrupt APIs
#define PIN_MUX_SUCCESS 0
#define REQUESTED_ALT_FUN_NOT_SUPPORTED 1
#define MAX_ALT_FN 10

asdk_errorcode_t asdk_set_pinmux(asdk_pinmux_config_t pinmux_config[], uint16_t pin_count)
{
    const dal_pin_t *cyt2b75_gpio = NULL;
    asdk_errorcode_t ret_value = ASDK_PINMUX_SUCCESS;
    bool pinmux_status_ret_val = PIN_MUX_SUCCESS;
    cy_stc_gpio_pin_config_t cy_pin_cfg = {0};
    cy_en_gpio_status_t cy_gpio_init_status = CY_GPIO_SUCCESS;

    /* validate configuration parameters */
    if (NULL == pinmux_config)
    {
        return ASDK_PINMUX_ERROR_NULL_PTR;
    }

    // de-intializing pinmux incase of failure
    // Initialize the pinmux one-by-one i.e. one at a time
    for (uint8_t pin_traverse = 0; pin_traverse < pin_count; pin_traverse++)
    {
        if (MCU_PIN_NOT_DEFINED <= pinmux_config[pin_traverse].MCU_pin_num)
        {
            return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
        }

        cyt2b75_gpio = &pin_map[(pinmux_config[pin_traverse].MCU_pin_num)];

        if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
        {
            return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
        }

        if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
        {
            return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
        }

        //  To do: for static functions internal to file add __ with asdk
        pinmux_status_ret_val = __asdk_set_pinmux_config_for_alternate_function(pinmux_config[pin_traverse], &cy_pin_cfg);

        if (PIN_MUX_SUCCESS == pinmux_status_ret_val)
        {
            /* initialize pin as GPIO */
            cy_gpio_init_status = Cy_GPIO_Pin_Init(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, &cy_pin_cfg);

            if (CY_GPIO_SUCCESS != cy_gpio_init_status)
            {
                ret_value = ASDK_GPIO_ERROR_INIT;
            }
        }
        else
        {
             ret_value = ASDK_PINMUX_ERROR_INVALID_ALTERNATE_FUNCTION;
        }
    }
    return ret_value;
}

asdk_errorcode_t asdk_set_default_pinmux(asdk_pinmux_config_t pinmux_config)
{
    asdk_errorcode_t ret_value = ASDK_PINMUX_SUCCESS;
    bool pinmux_status_ret_val = PIN_MUX_SUCCESS;
    const dal_pin_t *cyt2b75_gpio = NULL;
    cy_stc_gpio_pin_config_t cy_pin_cfg = {0};
    cy_en_gpio_status_t cy_gpio_init_status = CY_GPIO_SUCCESS;

    if (MCU_PIN_NOT_DEFINED <= pinmux_config.MCU_pin_num)
    {
        return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
    }

    cyt2b75_gpio = &pin_map[pinmux_config.MCU_pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
    }

    pinmux_status_ret_val = __asdk_set_pinmux_config_for_alternate_function(pinmux_config, &cy_pin_cfg);

    if (PIN_MUX_SUCCESS == pinmux_status_ret_val)
    {
        /* initialize pin as GPIO */
        cy_gpio_init_status = Cy_GPIO_Pin_Init(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, &cy_pin_cfg);

        if (CY_GPIO_SUCCESS != cy_gpio_init_status)
        {
            ret_value = ASDK_GPIO_ERROR_INIT;
        }
    }
    else
    {
        ret_value = ASDK_PINMUX_ERROR_INVALID_ALTERNATE_FUNCTION;
    }
    return ret_value;
}

asdk_errorcode_t asdk_deinit_pinmux(asdk_mcu_pin_t pin_num)
{
    uint32_t reg_value = 0;
    uint32_t pin_mask = 0;
    const dal_pin_t *cyt2b75_gpio = NULL;
    volatile stc_GPIO_PRT_t *cyt2b75_port_reg = NULL;

    if (MCU_PIN_MAX <= pin_num)
    {
        return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
    }

    // derive actual PORT.PIN from MCU pin
    cyt2b75_gpio = &pin_map[pin_num];

    if (CYT2B75_GPIO_PORT_MAX <= cyt2b75_gpio->port)
    {
        return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
    }

    if (CYT2B75_GPIO_PIN_MAX <= cyt2b75_gpio->pin)
    {
        return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
    }

    /* clear the expected bit alone for a given pin number
       and update the GPIO Port registers */

    // clear interrupt configuration reg.
    Cy_GPIO_SetInterruptEdge(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear interrupt mask reg.
    Cy_GPIO_SetInterruptMask(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear out buffer reg.
    pin_mask = ~(1 << cyt2b75_gpio->pin); // clear the bit
    cyt2b75_port_reg = gpio_port[cyt2b75_gpio->port];
    reg_value = cyt2b75_port_reg->unOUT.u32Register & pin_mask;
    cyt2b75_port_reg->unOUT.u32Register = reg_value;

    // clear drive mode
    Cy_GPIO_SetDrivemode(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear input buffer configuration register
    Cy_GPIO_SetVtrip(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear slew rate configuration
    Cy_GPIO_SetSlewRate(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear automotive configuration
    GPIO_SetVtripAuto(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    // clear alternate function selection regs.
    Cy_GPIO_SetHSIOM(gpio_port[cyt2b75_gpio->port], cyt2b75_gpio->pin, 0);

    return ASDK_PINMUX_SUCCESS;
}

static inline bool __asdk_set_pinmux_config_for_alternate_function(asdk_pinmux_config_t pinmux_config, cy_stc_gpio_pin_config_t *cy_pin_cfg)

{
    bool ret_value = PIN_MUX_SUCCESS;


    cy_pin_cfg->outVal = 0ul;
    cy_pin_cfg->driveMode = pinmux_config.pull_configuration;
    cy_pin_cfg->hsiom = 0ul;
    cy_pin_cfg->intEdge = 0ul;
    cy_pin_cfg->intMask = 0ul;
    cy_pin_cfg->vtrip = 0ul;
    cy_pin_cfg->slewRate = 0ul;
    cy_pin_cfg->driveSel = 0ul;


    for ( uint8_t alt_fn = 0; alt_fn < MAX_ALT_FN; alt_fn++)
    {

        pinmux_id = pinmux_arr[pinmux_config.MCU_pin_num][alt_fn].alt_fn_e ;
        if (pinmux_id == pinmux_config.alternate_fun_id)
        {
            cy_pin_cfg->hsiom = pinmux_arr[pinmux_config.MCU_pin_num][alt_fn].cyt_alt_fn_e;
            ret_value = PIN_MUX_SUCCESS;

            break;
        }
        else
        {
            ret_value = REQUESTED_ALT_FUN_NOT_SUPPORTED;
        }
    }

    return ret_value;
}
