==> AtherEnergy/asdk/platform/STM/stm32f4/dal/src/asdk_pinmux.c <==
#include "asdk_pinmux.h"
#include "asdk_mcu_pins.h" // Defines MCU pins as is
#include "asdk_platform.h"
#define PIN_MUX_SUCCESS 0
#define REQUESTED_ALT_FUN_NOT_SUPPORTED 1
#define MAX_ALT_FN 16

asdk_errorcode_t asdk_set_pinmux(asdk_pinmux_config_t pinmux_config[],
                                 uint16_t pin_count) {
  const dal_pin_t *stm32f4_gpio = NULL;
  asdk_errorcode_t ret_value = ASDK_PINMUX_SUCCESS;
  bool pinmux_status_ret_val = PIN_MUX_SUCCESS;

  GPIO_InitTypeDef GPIO_Type = {
      .Alternate = 0, .Mode = 0, .Pin = 0, .Pull = 0, .Speed = 0};

  /* validate configuration parameters */
  if (NULL == pinmux_config) {
    return ASDK_PINMUX_ERROR_NULL_PTR;
  }

  // de-intializing pinmux incase of failure
  // Initialize the pinmux one-by-one i.e. one at a time
  for (uint8_t pin_traverse = 0; pin_traverse < pin_count; pin_traverse++) {
    if (MCU_PIN_NOT_DEFINED <= pinmux_config[pin_traverse].MCU_pin_num) {
      return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
    }

    if (ASDK_GPIO_SPEED_TYPE_MAX <= pinmux_config[pin_traverse].slew_rate) {
      return ASDK_PINMUX_ERROR_INVALID_GPIO_SLEW_RATE;
    }

    stm32f4_gpio = &pin_map[(pinmux_config[pin_traverse].MCU_pin_num)];

    if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port) {
      return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
    }

    if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin) {
      return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
    }

    GPIO_Type.Pin = (1 << stm32f4_gpio->pin);

    pinmux_status_ret_val = __asdk_set_pinmux_config_for_alternate_function(
        pinmux_config[pin_traverse], &GPIO_Type);

    /* init clock gating */
    __enable_gpio_clock(stm32f4_gpio->port);

    if (PIN_MUX_SUCCESS == pinmux_status_ret_val) {
      /* initialize pin as GPIO */
      HAL_GPIO_Init(gpio_port[stm32f4_gpio->port], &GPIO_Type);
    } else {
      ret_value = ASDK_PINMUX_ERROR_INVALID_ALTERNATE_FUNCTION;
    }
  }
  return ret_value;
}

asdk_errorcode_t asdk_set_default_pinmux(asdk_pinmux_config_t pinmux_config) {
  asdk_errorcode_t ret_value = ASDK_PINMUX_SUCCESS;
  bool pinmux_status_ret_val = PIN_MUX_SUCCESS;
  const dal_pin_t *stm32f4_gpio = NULL;

  GPIO_InitTypeDef GPIO_Type = {
      .Alternate = 0, .Mode = 0, .Pin = 0, .Pull = 0, .Speed = 0};

  if (MCU_PIN_NOT_DEFINED <= pinmux_config.MCU_pin_num) {
    return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
  }

  stm32f4_gpio = &pin_map[pinmux_config.MCU_pin_num];

  if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port) {
    return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
  }

  if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin) {
    return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
  }

  GPIO_Type.Pin = stm32f4_gpio->pin;

  pinmux_status_ret_val = __asdk_set_pinmux_config_for_alternate_function(
      pinmux_config, &GPIO_Type);

  if (PIN_MUX_SUCCESS == pinmux_status_ret_val) {
    /* initialize pin as GPIO */
    HAL_GPIO_Init(gpio_port[stm32f4_gpio->port], &GPIO_Type);
  } else {
    ret_value = ASDK_PINMUX_ERROR_INVALID_ALTERNATE_FUNCTION;
  }
  return ret_value;
}

asdk_errorcode_t asdk_deinit_pinmux(asdk_mcu_pin_t pin_num) {
  const dal_pin_t *stm32f4_gpio = NULL;

  if (MCU_PIN_MAX <= pin_num) {
    return ASDK_PINMUX_ERROR_INVALID_MCU_PIN;
  }

  // derive actual PORT.PIN from MCU pin
  stm32f4_gpio = &pin_map[pin_num];

  if (STM32F4_GPIO_PORT_MAX <= stm32f4_gpio->port) {
    return ASDK_PINMUX_ERROR_INVALID_GPIO_PORT;
  }

  if (STM32F4_GPIO_PIN_MAX <= stm32f4_gpio->pin) {
    return ASDK_PINMUX_ERROR_INVALID_GPIO_PIN;
  }

  /* Calling De-init will reset all the gpio related configs to default values
   */
  HAL_GPIO_DeInit(gpio_port[stm32f4_gpio->port], stm32f4_gpio->pin);

  return ASDK_PINMUX_SUCCESS;
}

static inline bool __asdk_set_pinmux_config_for_alternate_function(
    asdk_pinmux_config_t pinmux_config, GPIO_InitTypeDef *stm32_pin_cfg) {
  bool ret_value = PIN_MUX_SUCCESS;

  if ((pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_OD_DRIVESLOW) ||
      (pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_OD_DRIVESHIGH)) {
    stm32_pin_cfg->Mode = GPIO_MODE_AF_OD;
  } else if (pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_ANALOG) {
    stm32_pin_cfg->Mode = GPIO_MODE_ANALOG;
  } else if (pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_HIGHZ) {
    stm32_pin_cfg->Mode = GPIO_MODE_INPUT;
  } else {
    stm32_pin_cfg->Mode = GPIO_MODE_AF_PP;
  }

  if ((pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_PULLUP) ||
      (pinmux_config.pull_configuration == ASDK_GPIO_PULL_TYPE_OD_DRIVESHIGH)) {
    stm32_pin_cfg->Pull = GPIO_PULLUP;
  } else if ((pinmux_config.pull_configuration ==
              ASDK_GPIO_PULL_TYPE_PULLDOWN) ||
             (pinmux_config.pull_configuration ==
              ASDK_GPIO_PULL_TYPE_OD_DRIVESLOW)) {
    stm32_pin_cfg->Pull = GPIO_PULLDOWN;
  } else {
    stm32_pin_cfg->Pull = GPIO_NOPULL;
  }

  stm32_pin_cfg->Speed = pinmux_config.slew_rate;

  for (uint8_t alt_fn = 0; alt_fn < MAX_ALT_FN; alt_fn++) {
    pinmux_id = pinmux_arr[pinmux_config.MCU_pin_num][alt_fn].alt_fn_e;

    if (pinmux_id == pinmux_config.alternate_fun_id) {
      stm32_pin_cfg->Alternate =
          pinmux_arr[pinmux_config.MCU_pin_num][alt_fn].st_alt_fn;
      ret_value = PIN_MUX_SUCCESS;

      break;
    } else {
      ret_value = REQUESTED_ALT_FUN_NOT_SUPPORTED;
    }
  }

  return ret_value;
}
